登陆注册接口完成。

--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -1,14 +1,19 @@
 #系统的上下文路径
 ctx = /campD
-
 #远程资源路径
 rmtResUrl = localhost:8080/campD/
-
 #静态文件的版本号
 jsCssVersion = 1.0.0
+#系统的角色配置
+role_common = 普通角色
+role_admin = 管理员角色
 
 ###-----这一部分可以定义各种文件格式-------
 #例如定义如下图片格式：
 fileFormatter = png,jpg,PNG,JPG
 
-
+###-----此处添加各种服务的URL-------
+#用户服务  author：王光华
+userJsonServer = http://localhost:8080/campD_server/user
+#角色服务  author：王光华
+roleJsonServer = http://localhost:8080/campD_server/role
