添加了场地、活动客户端代码。

--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -17,3 +17,7 @@ fileFormatter = png,jpg,PNG,JPG
 userJsonServer = http://localhost:8080/campD_server/user
 #角色服务  author：王光华
 roleJsonServer = http://localhost:8080/campD_server/role
+#活动服务  author： qrh
+activityJsonServer = http://localhost:8080/campD_server/activity
+#场地服务  author： qrh
+spaceJsonServer = http://localhost:8080/campD_server/space
