--- a/CampD_SERVER/server/jdbc.properties
+++ b/CampD_SERVER/server/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/cd_test?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/cdtest?useUnicode=true&characterEncoding=gbk
 jdbc.username=root
-jdbc.password=
+jdbc.password=root
