测试了登陆和注册。

--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -1,11 +1,11 @@
 #系统的上下文路径
 ctx = /campD
 #远程资源路径
-rmtResUrl = localhost:8080/campD/
+rmtResUrl = 192.168.1.102:8080/campD
 #静态文件的版本号
 jsCssVersion = 1.0.0
 #系统的角色配置
-role_common = 普通角色
+role_common = 注册用户
 role_admin = 管理员角色
 
 ###-----这一部分可以定义各种文件格式-------
