添加了资讯管理。

--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -6,7 +6,7 @@ rmtResUrl = 192.168.1.102:8080/campD_admin
 jsCssVersion = 1.0.0
 #系统的角色配置
 role_common = 注册用户
-role_admin = 管理员角色
+role_admin = 管理员
 #客户端域名
 cd_domain = http://192.168.1.102:8080/campD
 
