添加了公共服务类。

--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -15,6 +15,8 @@ cd_domain = http://192.168.1.102:8080/campD
 fileFormatter = png,jpg,PNG,JPG
 
 ###-----此处添加各种服务的URL-------
+#公共服务  author：王光华
+commonJsonServer = http://localhost:8080/campD_server/common
 #用户服务  author：王光华
 userJsonServer = http://localhost:8080/campD_server/user
 #角色服务  author：王光华
