添加了轮播图配置信息，意义图片上传实现。

--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -11,6 +11,8 @@ role_admin = 管理员
 ###-----这一部分可以定义各种文件格式-------
 #例如定义如下图片格式：
 fileFormatter = png,jpg,PNG,JPG
+#图片存储的临时目录
+tempFilePath=/ext/{0}/
 
 ###-----此处添加各种服务的URL-------
 #用户服务  author：王光华
