--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -13,6 +13,8 @@ cd_domain = http://192.168.1.102:8080/campD
 ###-----这一部分可以定义各种文件格式-------
 #例如定义如下图片格式：
 fileFormatter = png,jpg,PNG,JPG
+#图片存储的临时目录
+tempFilePath=/ext/{0}/
 
 ###-----此处添加各种服务的URL-------
 #公共服务  author：王光华
@@ -25,3 +27,7 @@ roleJsonServer = http://localhost:8080/campD_server/role
 activityJsonServer = http://localhost:8080/campD_server/activity
 #场地服务  author： qrh
 spaceJsonServer = http://localhost:8080/campD_server/space
+
+###-----系统配置信息类型-------
+#首页轮播图类型  author：王光华
+sys_conf_homePic = 0
