--- a/CampD/WebContent/WEB-INF/web.xml
+++ b/CampD/WebContent/WEB-INF/web.xml
@@ -29,7 +29,7 @@
        <filter-class>com.campD.portal.filter.ApplicationFilter</filter-class>
        <init-param>
            <param-name>session_exclude_url</param-name>
-           <param-value>/,/user/toLogin.do,/user/toRegister.do,/user/register.do,/user/login.do,/demo/greeting.do,/demo/index.do,/activity/getActivityList.do,/activity/getActivityById.do,/activity/takeAnActive.do,/activity/getActivityListByParam.do,/activity/getActivityListClassify.do,/space/getSpaceInfoList.do,/space/getSpaceInfoById.do,/space/getSpaceListByParam.do,/space/getSpaceListByLevel.do</param-value>
+           <param-value>/,/user/toLogin.do,/user/toRegister.do,/user/register.do,/user/login.do,/demo/greeting.do,/demo/index.do,/activity/getActivityList.do,/activity/getActivityById.do,/activity/getActivityListByParam.do,/activity/getActivityListClassify.do,/space/getSpaceInfoList.do,/space/getSpaceInfoById.do,/space/getSpaceListByParam.do,/space/getSpaceListByLevel.do</param-value>
        </init-param>
   </filter>
   <filter-mapping>
