修改了配置信息。

--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -15,6 +15,8 @@ fileFormatter = png,jpg,PNG,JPG
 tempFilePath=/ext/{0}/
 
 ###-----此处添加各种服务的URL-------
+#公共服务  author：王光华
+commonJsonServer = http://localhost:8080/campD_server/common
 #用户服务  author：王光华
 userJsonServer = http://localhost:8080/campD_server/user
 #角色服务  author：王光华
@@ -23,3 +25,7 @@ roleJsonServer = http://localhost:8080/campD_server/role
 activityJsonServer = http://localhost:8080/campD_server/activity
 #场地服务  author： qrh
 spaceJsonServer = http://localhost:8080/campD_server/space
+
+###-----系统配置信息类型-------
+#首页轮播图类型  author：王光华
+sys_conf_homePic = 0
