修改了上传文件的路径。

--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -14,7 +14,7 @@ cd_domain = http://192.168.1.102:8080/campD
 #例如定义如下图片格式：
 fileFormatter = png,jpg,PNG,JPG
 #图片存储的临时目录
-tempFilePath=/ext/{0}/
+tempFilePath=/images/{0}/
 
 ###-----此处添加各种服务的URL-------
 #公共服务  author：王光华
