优化了路径。

--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -2,8 +2,8 @@
 ctx = /campD
 #远程资源路径
 rmtResUrl = 192.168.1.102:8080/campD
-#OSS跟路径
-ossResUrl = http://oss-cn-shanghai.aliyuncs.com/
+#OSS跟路径  http:// + bucket + 数据源
+ossResUrl = http://camp-image.oss-cn-shanghai.aliyuncs.com/
 #静态文件的版本号
 jsCssVersion = 1.0.0
 #系统的角色配置
