--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -1,7 +1,7 @@
 #系统的上下文路径
 ctx = /campD_admin
 #远程资源路径
-rmtResUrl = 192.168.1.102:8080/campD_admin
+rmtResUrl = 121.43.233.18:80/campD_admin
 #静态文件的版本号
 jsCssVersion = 1.0.0
 #系统的角色配置
@@ -20,15 +20,15 @@ tempFilePath=/images/{0}/
 
 ###-----此处添加各种服务的URL-------
 #公共服务  author：王光华
-commonJsonServer = http://localhost:8080/campD_server/common
+commonJsonServer = http://10.160.37.53:8080/campD_server/common
 #用户服务  author：王光华
-userJsonServer = http://localhost:8080/campD_server/user
+userJsonServer = http://10.160.37.53:8080/campD_server/user
 #角色服务  author：王光华
-roleJsonServer = http://localhost:8080/campD_server/role
+roleJsonServer = http://10.160.37.53:8080/campD_server/role
 #活动服务  author： qrh
-activityJsonServer = http://localhost:8080/campD_server/activity
+activityJsonServer = http://10.160.37.53:8080/campD_server/activity
 #场地服务  author： qrh
-spaceJsonServer = http://localhost:8080/campD_server/space
+spaceJsonServer = http://10.160.37.53:8080/campD_server/space
 
 ###-----系统配置信息类型-------
 #首页轮播图类型  author：王光华
