--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -3,7 +3,7 @@ ctx = /campD
 #远程资源路径
 rmtResUrl = 115.29.199.113:80/campD
 #OSS跟路径  http:// + bucket + 数据源
-ossResUrl = http://camp-image.oss-cn-shanghai.aliyuncs.com/
+ossResUrl = http://camp-images.oss-cn-shanghai.aliyuncs.com/
 #静态文件的版本号
 jsCssVersion = 1.0.0
 #系统的角色配置
