--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -10,7 +10,7 @@ role_admin = 管理员
 #客户端域名
 cd_domain = http://192.168.1.102:8080/campD
 #OSS跟路径  http:// + bucket + 数据源
-ossResUrl = http://camp-image.oss-cn-shanghai.aliyuncs.com/
+ossResUrl = http://camp-images.oss-cn-shanghai.aliyuncs.com/
 
 ###-----这一部分可以定义各种文件格式-------
 #例如定义如下图片格式：
