--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -9,6 +9,7 @@ jsCssVersion = 1.0.0
 #系统的角色配置
 role_common = 注册用户
 role_admin = 管理员
+role_super_admin = 超级管理员
 
 ###-----这一部分可以定义各种文件格式-------
 #例如定义如下图片格式：
