--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -7,6 +7,7 @@ jsCssVersion = 1.0.0
 #系统的角色配置
 role_common = 注册用户
 role_admin = 管理员
+role_super_admin = 超级管理员
 #客户端域名
 cd_domain = http://192.168.1.102:8080/campD
 #OSS跟路径  http:// + bucket + 数据源
