--- a/CampD_ADMIN/WebContent/WEB-INF/web.xml
+++ b/CampD_ADMIN/WebContent/WEB-INF/web.xml
@@ -74,6 +74,11 @@
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
   
+  <!-- 制定会话缺省超时值半个小时 -->
+  <session-config>
+      <session-timeout>30</session-timeout>
+  </session-config> 
+  
   <!-- 设定JSP的相关配置 -->
   <jsp-config>
     <taglib>
