添加了城市联动效果。

--- a/CampD_ADMIN/.settings/org.eclipse.core.resources.prefs
+++ b/CampD_ADMIN/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/static/js/citySelect/city.css=UTF-8
 encoding//resource/system.properties=UTF-8
 encoding/<project>=UTF-8
