--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -1,7 +1,7 @@
 #系统的上下文路径
 ctx = /campD
 #远程资源路径
-rmtResUrl = 115.29.199.113:80/campD
+rmtResUrl = camp-images.oss-cn-shanghai.aliyuncs.com
 #OSS跟路径  http:// + bucket + 数据源
 ossResUrl = http://camp-images.oss-cn-shanghai.aliyuncs.com/
 #静态文件的版本号
