更新了配置。

--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -1,7 +1,7 @@
 #系统的上下文路径
 ctx = /campD_admin
 #远程资源路径
-rmtResUrl = 121.43.233.18:80/campD_admin
+rmtResUrl = icdying.cn//campD_admin
 #静态文件的版本号
 jsCssVersion = 1.0.0
 #系统的角色配置
