优化了代码，提交了样式列表。

--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -12,6 +12,8 @@ role_super_admin = 超级管理员
 cd_domain = http://192.168.1.102:8080/campD
 #OSS跟路径  http:// + bucket + 数据源
 ossResUrl = http://camp-images.oss-cn-shanghai.aliyuncs.com/
+##OSS路径bucket
+ossBucket = camp-images
 
 ###-----这一部分可以定义各种文件格式-------
 #例如定义如下图片格式：
