--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -1,9 +1,9 @@
 #系统的上下文路径
 ctx = /campD
 #远程资源路径
-rmtResUrl = camp-images.oss-cn-shanghai.aliyuncs.com
+rmtResUrl = cd-images.oss-cn-shanghai.aliyuncs.com
 #OSS跟路径  http:// + bucket + 数据源
-ossResUrl = http://camp-images.oss-cn-shanghai.aliyuncs.com/
+ossResUrl = http://cd-images.oss-cn-shanghai.aliyuncs.com/
 #静态文件的版本号
 jsCssVersion = 1.0.0
 #系统的角色配置
