--- a/CampD_SERVER/server/jdbc.properties
+++ b/CampD_SERVER/server/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://10.160.37.53:3306/cd?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
+jdbc.url=jdbc:mysql://112.124.63.41:3306/cdtest?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
 jdbc.username=root
 jdbc.password=CDying123
