--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -1,9 +1,9 @@
 #系统的上下文路径
 ctx = /campD
 #远程资源路径
-rmtResUrl = cd-images.oss-cn-shanghai.aliyuncs.com
+rmtResUrl = localhost:8080/campD
 #OSS跟路径  http:// + bucket + 数据源
-ossResUrl = http://cd-images.oss-cn-shanghai.aliyuncs.com/
+ossResUrl = http://camp-images.oss-cn-shanghai.aliyuncs.com/
 #静态文件的版本号
 jsCssVersion = 1.0.0
 #系统的角色配置
@@ -19,15 +19,15 @@ tempFilePath=/ext/{0}/
 
 ###-----此处添加各种服务的URL-------
 #公共服务  author：王光华
-commonJsonServer = http://10.160.37.53:8080/campD_server/common
+commonJsonServer = http://localhost:8080/campD_server/common
 #用户服务  author：王光华
-userJsonServer = http://10.160.37.53:8080/campD_server/user
+userJsonServer = http://localhost:8080/campD_server/user
 #角色服务  author：王光华
-roleJsonServer = http://10.160.37.53:8080/campD_server/role
+roleJsonServer = http://localhost:8080/campD_server/role
 #活动服务  author： qrh
-activityJsonServer = http://10.160.37.53:8080/campD_server/activity
+activityJsonServer = http://localhost:8080/campD_server/activity
 #场地服务  author： qrh
-spaceJsonServer = http://10.160.37.53:8080/campD_server/space
+spaceJsonServer = http://localhost:8080/campD_server/space
 
 ###-----系统配置信息类型-------
 #首页轮播图类型  author：王光华
