--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -20,6 +20,8 @@ ossBucket = camp-images
 fileFormatter = png,jpg,PNG,JPG
 #图片存储的临时目录
 tempFilePath=/images/{0}/
+#图片存储的临时目录
+htmlFilePath=/attached/html/{0}/
 
 ###-----此处添加各种服务的URL-------
 #公共服务  author：王光华
