添加了礼品模块。

--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -30,10 +30,12 @@ commonJsonServer = http://localhost:8080/campD_server/common
 userJsonServer = http://localhost:8080/campD_server/user
 #角色服务  author：王光华
 roleJsonServer = http://localhost:8080/campD_server/role
-#活动服务  author： qrh
+#活动服务  author： 王光华
 activityJsonServer = http://localhost:8080/campD_server/activity
-#场地服务  author： qrh
+#场地服务  author： 王光华
 spaceJsonServer = http://localhost:8080/campD_server/space
+#礼品服务  author： 王光华
+giftJsonServer = http://localhost:8080/campD_server/gift
 
 ###-----系统配置信息类型-------
 #首页轮播图类型  author：王光华
