--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -1,7 +1,7 @@
 #系统的上下文路径
 ctx = /campD
 #远程资源路径
-rmtResUrl = 192.168.88.78:8080/campD
+rmtResUrl = camp-images.oss-cn-shanghai.aliyuncs.com/
 #OSS跟路径  http:// + bucket + 数据源
 ossResUrl = http://camp-images.oss-cn-shanghai.aliyuncs.com/
 #静态文件的版本号
@@ -24,10 +24,12 @@ commonJsonServer = http://localhost:8080/campD_server/common
 userJsonServer = http://localhost:8080/campD_server/user
 #角色服务  author：王光华
 roleJsonServer = http://localhost:8080/campD_server/role
-#活动服务  author： qrh
+#活动服务  author： 王光华
 activityJsonServer = http://localhost:8080/campD_server/activity
-#场地服务  author： qrh
+#场地服务  author： 王光华
 spaceJsonServer = http://localhost:8080/campD_server/space
+#礼品服务  author： 王光华
+giftJsonServer = http://localhost:8080/campD_server/gift
 
 ###-----系统配置信息类型-------
 #首页轮播图类型  author：王光华
