--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -34,3 +34,5 @@ giftJsonServer = http://localhost:8080/campD_server/gift
 ###-----系统配置信息类型-------
 #首页轮播图类型  author：王光华
 sys_conf_homePic = 0
+#暂时开放礼品、场地业务的城市  author：王光华
+biz_open_city = 上海市,北京市,广州市,深圳市,杭州市
