微信成为开发者，微信JSSDK服务开发。

--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -31,6 +31,12 @@ spaceJsonServer = http://localhost:8080/campD_server/space
 #礼品服务  author： 王光华
 giftJsonServer = http://localhost:8080/campD_server/gift
 
+###-----微信公众号-------
+#AppID(应用ID)  author：王光华
+wx_AppID = wx6cda7c475285d257
+#AppSecret(应用密钥)  author：王光华
+wx_AppSecret = 
+
 ###-----系统配置信息类型-------
 #首页轮播图类型  author：王光华
 sys_conf_homePic = 0
