添加了微信公众号的secret。

--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -35,7 +35,7 @@ giftJsonServer = http://localhost:8080/campD_server/gift
 #AppID(应用ID)  author：王光华
 wx_AppID = wx6cda7c475285d257
 #AppSecret(应用密钥)  author：王光华
-wx_AppSecret = 
+wx_AppSecret = e68880c54630083e0863c9b998fa2f0c
 
 ###-----系统配置信息类型-------
 #首页轮播图类型  author：王光华
