添加了办公空间模块。

--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -36,6 +36,8 @@ activityJsonServer = http://localhost:8080/campD_server/activity
 spaceJsonServer = http://localhost:8080/campD_server/space
 #礼品服务  author： 王光华
 giftJsonServer = http://localhost:8080/campD_server/gift
+#办公空间服务  author： 王光华
+officeSpaceJsonServer = http://localhost:8080/campD_server/officeSpace
 
 ###-----系统配置信息类型-------
 #首页轮播图类型  author：王光华
