--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -30,6 +30,8 @@ activityJsonServer = http://localhost:8080/campD_server/activity
 spaceJsonServer = http://localhost:8080/campD_server/space
 #礼品服务  author： 王光华
 giftJsonServer = http://localhost:8080/campD_server/gift
+#办公空间服务  author： 王光华
+officeSpaceJsonServer = http://localhost:8080/campD_server/officeSpace
 
 ###-----微信公众号-------
 #AppID(应用ID)  author：王光华
