添加了子空间模块，子空间发布修改模块。

--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -32,6 +32,8 @@ spaceJsonServer = http://localhost:8080/campD_server/space
 giftJsonServer = http://localhost:8080/campD_server/gift
 #办公空间服务  author： 王光华
 officeSpaceJsonServer = http://localhost:8080/campD_server/officeSpace
+#子空间服务  author： 王光华
+officeJsonServer = http://localhost:8080/campD_server/office
 
 ###-----微信公众号-------
 #AppID(应用ID)  author：王光华
