--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -38,6 +38,8 @@ spaceJsonServer = http://localhost:8080/campD_server/space
 giftJsonServer = http://localhost:8080/campD_server/gift
 #办公空间服务  author： 王光华
 officeSpaceJsonServer = http://localhost:8080/campD_server/officeSpace
+#子空间服务  author： 王光华
+officeJsonServer = http://localhost:8080/campD_server/office
 
 ###-----系统配置信息类型-------
 #首页轮播图类型  author：王光华
