--- a/CampD/WebContent/WEB-INF/web.xml
+++ b/CampD/WebContent/WEB-INF/web.xml
@@ -45,7 +45,7 @@
        <filter-class>com.campD.portal.filter.ApplicationFilter</filter-class>
        <init-param>
            <param-name>session_exclude_url</param-name>
-           <param-value>/,/user/toLogin.do,/user/toRegister.do,/user/register.do,/user/login.do,/demo/greeting.do,/demo/index.do,/activity/getActivityList.do,/activity/getActivityById.do,/activity/getActivityListByParam.do,/activity/getActivityListByActType.do,/activity/getActivityListClassify.do,/space/getSpaceInfoList.do,/space/getSpaceInfoById.do,/space/getSpaceListByParam.do,/space/getSpace.do,/space/getSpaceListByLevel.do,/common/findSysConfigs.do,/gift/list.do,/gift/getById.do,/gift/highLevelList.do,/gift/indexList.do,/common/toMap.do,/officeSpace/toList.do,/officeSpace/list.do,/wx/validateServer.do,/wx/getSignParam.do</param-value>
+           <param-value>/,/user/toLogin.do,/user/toRegister.do,/user/register.do,/user/login.do,/demo/greeting.do,/demo/index.do,/activity/getActivityList.do,/activity/getActivityById.do,/activity/getActivityListByParam.do,/activity/getActivityListByActType.do,/activity/getActivityListClassify.do,/space/getSpaceInfoList.do,/space/getSpaceInfoById.do,/space/getSpaceListByParam.do,/space/getSpace.do,/space/getSpaceListByLevel.do,/common/findSysConfigs.do,/gift/list.do,/gift/getById.do,/gift/highLevelList.do,/gift/indexList.do,/common/toMap.do,/officeSpace/toList.do,/officeSpace/list.do,/office/toList.do,/office/list.do,/office/getById.do,/wx/validateServer.do,/wx/getSignParam.do</param-value>
        </init-param>
   </filter>
   <filter-mapping>
