--- a/CampD_ADMIN/resource/system.properties
+++ b/CampD_ADMIN/resource/system.properties
@@ -44,5 +44,7 @@ officeJsonServer = http://localhost:8080/campD_server/office
 ###-----系统配置信息类型-------
 #首页轮播图类型  author：王光华
 sys_conf_homePic = 0
+#首页通知  author：王光华
+sys_conf_notify = 1
 #暂时开放礼品、场地业务的城市  author：王光华
 biz_open_city = 上海市,北京市,广州市,深圳市,杭州市
