增加了新的配置信息。

--- a/CampD/resource/system.properties
+++ b/CampD/resource/system.properties
@@ -44,5 +44,7 @@ wx_AppSecret = e68880c54630083e0863c9b998fa2f0c
 ###-----系统配置信息类型-------
 #首页轮播图类型  author：王光华
 sys_conf_homePic = 0
+#首页通知  author：王光华
+sys_conf_notify = 1
 #暂时开放礼品、场地业务的城市  author：王光华
 biz_open_city = 上海市,北京市,广州市,深圳市,杭州市
